--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.js]
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
