standard linting ./scripts/*.js and dont auto format.
Auto formatting seems to have some issues atm which
isnt possible overcome, other than not running the
auto formatter at all.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "node build.js serve",
     "load-versions": "node scripts/load-versions.js",
     "start": "npm run serve",
-    "test": "standard build.js scripts/**/*.js --format"
+    "test": "standard build.js scripts/*.js scripts/**/*.js"
   },
   "repository": {
     "type": "git",
