--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chokidar": "^1.0.5",
     "handlebars": "^3.0.0",
     "map-async": "~0.1.1",
+    "marked": "^0.3.5",
     "metalsmith": "^2.0.0",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-feed": "0.0.6",
