--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer-stylus": "0.7.1",
     "chokidar": "1.2.0",
     "handlebars": "3.0.3",
+    "junk": "1.0.2",
     "map-async": "0.1.1",
     "marked": "0.3.5",
     "metalsmith": "2.1.0",
