--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "metalsmith-serve": "0.0.3",
     "metalsmith-stylus": "1.0.0",
     "ncp": "2.0.0",
+    "node-version-data": "1.0.0",
     "octonode": "0.7.4",
     "require-dir": "0.3.0",
     "semver": "5.0.3",
