--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "strftime": "0.9.2"
   },
   "devDependencies": {
-    "faucet": "0.0.1",
-    "nock": "2.17.0",
-    "pre-commit": "1.1.2",
-    "proxyquire": "1.7.3",
-    "sinon": "1.17.2",
-    "standard": "5.3.1",
-    "tape": "4.2.2"
+    "faucet": "^0.0.1",
+    "nock": "^2.17.0",
+    "pre-commit": "^1.1.2",
+    "proxyquire": "^1.7.3",
+    "sinon": "^1.17.2",
+    "standard": "^5.3.1",
+    "tape": "^4.2.2"
   }
 }
