Code for pulling in event data and intial, terrible, display code.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer-stylus": "0.8.1",
     "chokidar": "1.2.0",
     "handlebars": "4.0.4",
+    "js-yaml": "^3.4.5",
     "junk": "1.0.2",
     "map-async": "0.1.1",
     "marked": "0.3.5",
@@ -42,6 +43,7 @@
     "ncp": "2.0.0",
     "node-version-data": "1.0.0",
     "octonode": "0.7.4",
+    "request": "^2.67.0",
     "require-dir": "0.3.0",
     "semver": "5.0.3",
     "st": "1.0.0",
