Adding a map to the top of the events page. Also formatting fixes to make standard happy.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer-stylus": "0.8.1",
     "chokidar": "1.2.0",
     "handlebars": "4.0.4",
+    "html-to-text": "^1.5.0",
     "js-yaml": "^3.4.5",
     "junk": "1.0.2",
     "map-async": "0.1.1",
@@ -41,6 +42,7 @@
     "metalsmith-prism": "2.1.1",
     "metalsmith-stylus": "1.0.0",
     "ncp": "2.0.0",
+    "node-geocoder": "^3.4.1",
     "node-version-data": "1.0.0",
     "octonode": "0.7.4",
     "request": "^2.67.0",
