comment gitignore and add commonly ignored stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Generated HTML and other static files
 build/
+# Commonly ignored Node.js files
 node_modules/
 npm-debug.log
+.npm/
+
+# OSX system files, the bane of our existence
+.DS_Store
+.AppleDouble
+.LSOverride
