--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs.org",
   "version": "1.0.0",
-  "description": "New Nodejs.org website",
+  "description": "Nodejs.org website",
   "homepage": "https://nodejs.org",
   "scripts": {
     "build": "node build.js",
