--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "cheerio": "0.20.0",
     "chokidar": "1.4.3",
     "handlebars": "4.0.5",
-    "html-to-text": "^2.1.0",
-    "js-yaml": "^3.6.0",
+    "html-to-text": "2.1.0",
+    "js-yaml": "3.6.0",
     "junk": "1.0.2",
     "map-async": "0.1.1",
     "marked": "0.3.5",
@@ -52,10 +52,10 @@
     "metalsmith-stylus": "2.0.0",
     "metalsmith-yearly-pagination": "2.0.0",
     "ncp": "2.0.0",
-    "node-geocoder": "^3.9.1",
+    "node-geocoder": "3.9.1",
     "node-version-data": "1.0.1",
     "octonode": "0.7.5",
-    "request": "^2.72.0",
+    "request": "2.72.0",
     "require-dir": "0.3.0",
     "semver": "5.1.0",
     "st": "1.1.0",
