--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "load-versions": "node scripts/load-versions.js",
     "start": "npm run serve",
     "test": "npm run test:lint && npm run test:unit && npm run test:smoke",
-    "test:lint": "standard",
+    "test:lint": "standard && htmllint **/*.hbs",
     "test:unit": "tape tests/**/*.test.js | faucet",
     "test:smoke": "tape tests/*.smoketest.js | faucet"
   },
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "faucet": "^0.0.1",
+    "htmllint-cli": "0.0.4",
     "nock": "^8.0.0",
     "pre-commit": "^1.1.2",
     "proxyquire": "^1.7.4",
