--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "load-versions": "node scripts/load-versions.js",
     "start": "npm run serve",
     "test": "npm run test:lint && npm run test:unit && npm run test:smoke",
-    "test:lint": "standard && htmllint **/*.hbs",
+    "test:lint": "standard && htmllint **/*.hbs && stylint layouts/css",
     "test:unit": "tape tests/**/*.test.js | faucet",
     "test:smoke": "tape tests/*.smoketest.js | faucet"
   },
@@ -68,6 +68,7 @@
     "pre-commit": "^1.1.2",
     "proxyquire": "^1.7.4",
     "standard": "^6.0.8",
+    "stylint": "^1.3.8",
     "tape": "^4.5.1"
   }
 }
