--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-to-text": "2.1.3",
     "js-yaml": "3.6.1",
     "junk": "1.0.3",
+    "lodash.defaultsdeep": "4.5.1",
     "map-async": "0.1.1",
     "marked": "0.3.5",
     "metalsmith": "2.1.0",
