--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "npm run test:lint && npm run test:unit && npm run test:smoke",
     "test:lint": "standard && htmllint **/*.hbs && stylint layouts/css",
     "test:unit": "tape tests/**/*.test.js | faucet",
-    "test:smoke": "tape tests/*.smoketest.js | faucet"
+    "test:smoke": "tape tests/*.smoketest.js | faucet",
+    "test:snyk": "snyk test",
+    "postinstall": "snyk protect"
   },
   "repository": {
     "type": "git",
@@ -59,6 +61,7 @@
     "request": "2.74.0",
     "require-dir": "0.3.0",
     "semver": "5.3.0",
+    "snyk": "1.17.2",
     "st": "1.2.0",
     "strftime": "0.9.2"
   },
@@ -71,5 +74,6 @@
     "standard": "^7.0.0",
     "stylint": "^1.3.8",
     "tape": "^4.5.1"
-  }
+  },
+  "snyk": true
 }
