Make the download script follow the standard style (#856)
Fixes: https://github.com/nodejs/nodejs.org/issues/851

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "standard": {
     "ignore": [
-      "static/"
+      "static/js/modernizr.custom.js",
+      "static/legacy/*"
     ]
   },
   "dependencies": {
