Respect visitor's Do-Not-Track setting (#885)
There's been raised some concern about our use of external web tracking/analytics
service. In that discussion, there has been agreement that we at least should respect
the visitor's Do-Not-Track setting in their browser.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "standard": {
     "ignore": [
       "static/js/modernizr.custom.js",
+      "static/js/dnt_helper.js",
       "static/legacy/*"
     ]
   },
