--- a/external/survey-2018/package.json
+++ b/external/survey-2018/package.json
@@ -2,7 +2,7 @@
   "name": "survey-report-2018",
   "version": "1.0.0",
   "scripts": {
-    "build": "uglifyjs -c -m -o {data,full,graph}.min.js {data,full,graph}.js"
+    "build": "uglifyjs -c -m -o data.min.js data.js && uglifyjs -c -m -o full.min.js full.js && uglifyjs -c -m -o graph.min.js graph.js"
   },
   "devDependencies": {
     "uglify-js": "^3.3.28"
