--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "metalsmith-permalinks": "0.5.0",
     "metalsmith-prism": "3.1.1",
     "metalsmith-stylus": "3.0.0",
-    "metalsmith-yearly-pagination": "2.0.0",
+    "metalsmith-yearly-pagination": "^2.0.1",
     "ncp": "2.0.0",
     "node-version-data": "1.0.1",
     "octonode": "^0.9.3",
