--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "marked": "0.3.19",
     "metalsmith": "2.3.0",
     "metalsmith-collections": "0.9.0",
-    "metalsmith-discover-helpers": "0.1.0",
+    "metalsmith-discover-helpers": "^0.1.1",
     "metalsmith-discover-partials": "0.1.0",
     "metalsmith-feed": "1.0.0",
     "metalsmith-layouts": "2.1.0",
