--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "metalsmith": "2.3.0",
     "metalsmith-collections": "0.9.0",
     "metalsmith-discover-helpers": "^0.1.1",
-    "metalsmith-discover-partials": "0.1.0",
+    "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-feed": "1.0.0",
     "metalsmith-layouts": "2.1.0",
     "metalsmith-markdown": "0.2.2",
