--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-feed": "1.0.0",
     "metalsmith-layouts": "2.1.0",
-    "metalsmith-markdown": "0.2.2",
+    "metalsmith-markdown": "^1.0.1",
     "metalsmith-metadata": "0.0.4",
     "metalsmith-permalinks": "^1.0.0",
     "metalsmith-prism": "3.1.1",
