Add Release Schedule
Pulls data from https://github.com/nodejs/Release/pull/380

Fixes: #1889

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "serve": "node server.js",
     "external:survey": "rsync -avz --exclude 'node_modules*' --exclude 'package*' external/survey-2018/ build/en/user-survey-report",
     "gzip": "find build -type f \\( -name '*.html' -o -name '*.css' -o -name '*.js' -o -name '*.xml' -o -name '*.json' \\) -exec gzip -kf9 {} \\;",
-    "deploy": "npm run build && npm run external:survey && npm run gzip",
+    "deploy": "npm run load-schedule && npm run build && npm run external:survey && npm run gzip",
     "load-versions": "node scripts/load-versions.js",
+    "load-schedule": "curl -sS https://raw.githubusercontent.com/nodejs/Release/master/schedule.json -o source/schedule.json",
     "start": "npm run serve",
     "test": "npm run test:lint && npm run test:unit && npm run test:smoke",
     "test:lint": "standard && htmllint **/*.hbs && stylint layouts/css",
