Build default language with locale (adds preserveLocale flag) (#1940)
Currently when navigating to a page that does not have a locale, it will default the english one, this breaks the navigation (it doesn't really break it, but everything including links now changes locale to english)
![2018-12-15 01 11 30](https://user-images.githubusercontent.com/11986564/50038916-c2886300-0007-11e9-8755-0ad42a12c67e.gif)
This PR adds a preserveLocale flag that will run a second build of the files not included in the locale that exist in the "en" locale but using the current locale site.json. 
Build time is considerably longer (*en* locale has almost 700 files, compared to others with 20 or less)
The result:
![2018-12-15 01 16 14](https://user-images.githubusercontent.com/11986564/50039015-86ee9880-0009-11e9-82ca-39405727747b.gif)

Open for discussion.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "homepage": "https://nodejs.org",
   "scripts": {
     "build": "node build.js",
+    "build:deploy":"node build.js --preserveLocale",
     "serve": "node server.js",
     "external:survey": "rsync -avz --exclude 'node_modules*' --exclude 'package*' external/survey-2018/ build/en/user-survey-report",
     "gzip": "find build -type f \\( -name '*.html' -o -name '*.css' -o -name '*.js' -o -name '*.xml' -o -name '*.json' \\) -exec gzip -kf9 {} \\;",
-    "deploy": "npm run load-schedule && npm run build && npm run external:survey && npm run gzip",
+    "deploy": "npm run load-schedule && npm run build:deploy && npm run external:survey && npm run gzip",
     "load-versions": "node scripts/load-versions.js",
     "load-schedule": "curl -sS https://raw.githubusercontent.com/nodejs/Release/master/schedule.json -o source/schedule.json",
     "start": "npm run serve",
