--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,8 +2,7 @@ files:
   - source: /locale/en/**/*.md
     translation: /locale/%two_letters_code%/**/%original_file_name%
     content_segmentation: 0
-    ignore :
-      /locale/en/blog/**/*.md"
+    ignore: /locale/en/blog/**/*.md"
     languages_mapping:
       two_letters_code:
         pt-BR: pt-br
@@ -11,8 +10,7 @@ files:
         zh-TW: zh-tw
   - source: /locale/en/**/*.json
     translation: /locale/%two_letters_code%/**/%original_file_name%
-    ignore :
-      /locale/en/blog/**/*.json"
+    ignore: /locale/en/blog/**/*.json"
     languages_mapping:
       two_letters_code:
         pt-BR: pt-br
