--- a/.remarkrc
+++ b/.remarkrc
@@ -11,8 +11,6 @@
     ["remark-lint-no-trailing-spaces", false],
     ["remark-lint-no-undefined-references", false],
     ["remark-lint-no-unused-definitions", false],
-    ["remark-lint-prohibited-strings", false],
-    ["remark-lint-table-cell-padding", false],
-    ["remark-lint-table-pipes", false]
+    ["remark-lint-prohibited-strings", false]
   ]
 }
