--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,10 @@
 name: Tests
-on: [push, pull_request]
-env:
-  CI: true
+on:
+  push:
+    branches-ignore:
+      - "translations"
+      - "dependabot/**"
+  pull_request:
 
 jobs:
   test:
