--- a/.remarkrc
+++ b/.remarkrc
@@ -6,6 +6,7 @@
     ["remark-lint-first-heading-level", false],
     ["remark-lint-maximum-line-length", false],
     ["remark-lint-no-file-name-articles", false],
+    ["remark-lint-no-literal-urls", false],
     ["remark-lint-no-shortcut-reference-link", false],
     ["remark-lint-no-trailing-spaces", false],
     ["remark-lint-no-undefined-references", false],
