--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,14 @@
 name: Tests
+
 on:
   push:
     branches-ignore:
       - "translations"
       - "dependabot/**"
   pull_request:
+
+env:
+  NODE: 12.x
 
 jobs:
   test:
@@ -17,10 +21,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2.1.2
         with:
-          node-version: "12"
+          node-version: "${{ env.NODE }}"
 
-      - run: node --version
-      - run: npm --version
       - run: java -version
 
       - name: Install npm dependencies
