--- a/package.json
+++ b/package.json
@@ -73,9 +73,10 @@
     "nock": "^13.0.5",
     "node-fetch": "^2.6.1",
     "proxyquire": "^2.1.3",
-    "remark-cli": "^8.0.1",
-    "remark-frontmatter": "^2.0.0",
-    "remark-preset-lint-node": "^1.17.1",
+    "remark-cli": "^9.0.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-gfm": "^1.0.0",
+    "remark-preset-lint-node": "^2.0.0",
     "st": "^2.0.0",
     "standard": "^16.0.3",
     "stylelint": "^13.8.0",
