chore: Add ESLint Prettier plugin

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,13 @@
 {
   "extends": [
     "eslint:recommended",
-    "standard"
-  ]
+    "standard",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
