--- a/package.json
+++ b/package.json
@@ -61,15 +61,18 @@
     "chokidar": "^3.5.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.1",
     "faucet": "0.0.1",
     "linkinator": "^2.16.0",
     "lockfile-lint": "^4.6.2",
     "nock": "^13.2.1",
     "node-fetch": "^2.6.6",
+    "prettier": "^2.4.1",
     "proxyquire": "^2.1.3",
     "remark-cli": "^10.0.0",
     "remark-frontmatter": "^4.0.1",
