--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10.2.5",
     "cheerio": "^0.22.0",
     "fibers": "^5.0.0",
+    "graceful-fs": "^4.2.6",
     "handlebars": "^4.7.7",
     "jstransformer-handlebars": "^1.1.0",
     "junk": "^3.1.0",
