npm scripts: add `--aggregate-output` (#3833)

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "start": "npm run serve",
     "test": "npm-run-all test:lint test:unit",
     "linkinator": "delay 3 && linkinator http://localhost:8080/en/ --recurse --silent --skip \"^(?!http://localhost)\"",
-    "test:linkinator": "npm-run-all --parallel --race \"serve -- --serve-only\" linkinator",
+    "test:lint": "npm-run-all --parallel --aggregate-output test:lint:*",
     "test:lint:js": "standard",
     "test:lint:md": "remark -qf .",
     "test:lint:stylelint": "stylelint \"layouts/css/**/*.{css,scss}\"",
     "test:lint:lockfile": "lockfile-lint --allowed-hosts npm github.com --allowed-schemes https: --empty-hostname false --type npm --path package-lock.json",
-    "test:lint": "npm-run-all --parallel test:lint:*",
     "test:html": "node scripts/vnu-jar.js",
+    "test:linkinator": "npm-run-all --parallel --race \"serve -- --serve-only\" linkinator",
     "test:unit": "tape tests/**/*.test.js | faucet"
   },
   "repository": "nodejs/nodejs.org",
