--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "metalsmith-feed": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-markdown": "^1.3.0",
+    "metalsmith-one-replace": "^0.1.7",
     "metalsmith-prism": "^3.1.1",
     "metalsmith-yearly-pagination": "^4.0.2",
     "ncp": "^2.0.0",
