--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "dependencies": {
+    "@metalsmith/permalinks": "^2.3.0",
     "autoprefixer": "^10.2.6",
     "cheerio": "^0.22.0",
     "graceful-fs": "^4.2.6",
@@ -51,7 +52,6 @@
     "metalsmith-feed": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-markdown": "^1.3.0",
-    "metalsmith-permalinks": "^2.2.0",
     "metalsmith-prism": "^3.1.1",
     "metalsmith-yearly-pagination": "^4.0.2",
     "ncp": "^2.0.0",
