--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,6 @@ on:
       - "dependabot/**"
   pull_request:
 
-env:
-  NODE: 14.x
-
 jobs:
   run:
     name: Node on ${{ matrix.os }}
@@ -27,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "${{ env.NODE }}"
+          node-version: 16
           cache: npm
 
       - run: java -version
