--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  FORCE_COLOR: 2
+
 jobs:
   run:
     name: Node on ${{ matrix.os }}
@@ -44,4 +47,10 @@ jobs:
         run: npm run test:html
 
       - name: Run linkinator
-        run: npm run test:linkinator
+        uses: JustinBeckwith/linkinator-action@v1
+        with:
+          linksToSkip: "^(?!http://localhost)"
+          paths: en
+          recurse: true
+          serverRoot: build
+          verbosity: error
