--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:lint": "npm-run-all --parallel --aggregate-output test:lint:*",
     "test:lint:js": "eslint .",
     "test:lint:md": "remark -qf .",
-    "test:lint:stylelint": "stylelint \"layouts/css/**/*.{css,scss}\"",
+    "test:lint:stylelint": "stylelint \"layouts/css/**/*.{css,scss}\" --report-needless-disables",
     "test:lint:lockfile": "lockfile-lint --allowed-hosts npm github.com --allowed-schemes https: --empty-hostname false --type npm --path package-lock.json",
     "test:html": "node scripts/vnu-jar.js",
     "test:linkinator": "npm-run-all --parallel --race \"serve -- --serve-only\" linkinator",
@@ -30,6 +30,7 @@
     "node": ">=12"
   },
   "dependencies": {
+    "@metalsmith/markdown": "^1.4.0",
     "@metalsmith/permalinks": "^2.3.0",
     "autoprefixer": "^10.4.0",
     "cheerio": "^0.22.0",
@@ -40,14 +41,13 @@
     "jstransformer-handlebars": "^1.1.0",
     "junk": "^3.1.0",
     "lodash.defaultsdeep": "^4.6.1",
-    "marked": "^4.0.7",
+    "marked": "^4.0.8",
     "metalsmith": "^2.3.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-discover-helpers": "^0.1.1",
     "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-feed": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
-    "metalsmith-markdown": "^1.3.0",
     "metalsmith-one-replace": "^0.1.7",
     "metalsmith-prism": "^3.1.1",
     "metalsmith-yearly-pagination": "^4.0.2",
@@ -69,18 +69,18 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
-    "linkinator": "^2.16.2",
+    "linkinator": "^3.0.1",
     "lockfile-lint": "^4.6.2",
     "nock": "^13.2.1",
     "node-fetch": "^2.6.6",
     "prettier": "^2.5.1",
     "proxyquire": "^2.1.3",
-    "remark-cli": "^10.0.0",
+    "remark-cli": "^10.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-preset-lint-node": "^3.3.0",
     "st": "^3.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-twbs-bootstrap": "^2.2.4",
+    "stylelint": "^14.1.0",
+    "stylelint-config-twbs-bootstrap": "^3.0.0",
     "tape": "^5.3.2",
     "vnu-jar": "21.10.12",
     "wait-on": "^6.0.0"
