--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-semistandard": "^16.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
