--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "build": "node build.js",
     "build:deploy": "node build.js --preserveLocale",
     "serve": "cross-env NODE_ENV=development node server.js",
-    "external:survey": "rsync -avz --exclude 'node_modules*' --exclude 'package*' external/survey-2018/ build/en/user-survey-report",
+    "external:survey": "rsync -avz --exclude \"node_modules*\" --exclude \"package*\" external/survey-2018/ build/en/user-survey-report",
     "deploy": "npm-run-all load-schedule build:deploy external:survey",
     "load-versions": "node scripts/load-versions.js",
     "load-schedule": "curl -sS https://raw.githubusercontent.com/nodejs/Release/master/schedule.json -o source/schedule.json",
     "start": "npm run serve",
     "test": "npm-run-all test:lint test:unit",
     "test:lint": "npm-run-all --parallel --aggregate-output --continue-on-error test:lint:*",
-    "test:lint:js": "eslint .",
+    "test:lint:js": "eslint . --cache --cache-location .cache/.eslintcache",
     "test:lint:md": "remark -qf .",
-    "test:lint:stylelint": "stylelint \"layouts/css/**/*.{css,scss}\" --report-needless-disables",
+    "test:lint:stylelint": "stylelint \"layouts/css/**/*.{css,scss}\" --cache --cache-location .cache/.stylelintcache --report-needless-disables",
     "test:lint:lockfile": "lockfile-lint --allowed-hosts npm github.com --allowed-schemes https: --empty-hostname false --type npm --path package-lock.json",
     "test:html": "node scripts/vnu-jar.js",
-    "test:unit": "tape tests/**/*.test.js"
+    "test:unit": "tape \"tests/**/*.test.js\""
   },
   "repository": "nodejs/nodejs.org",
   "author": "Node.js Website Working Group",
