CI: restrict pushes event and add `workflow_dispatch` (#4306)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,10 @@ name: Tests
 
 on:
   push:
-    branches-ignore:
-      - "translations"
-      - "dependabot/**"
+    branches:
+      - main
   pull_request:
+  workflow_dispatch:
 
 jobs:
   run:
