package.json: add `--continue-on-error` flag (#4307)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "load-schedule": "curl -sS https://raw.githubusercontent.com/nodejs/Release/master/schedule.json -o source/schedule.json",
     "start": "npm run serve",
     "test": "npm-run-all test:lint test:unit",
-    "test:lint": "npm-run-all --parallel --aggregate-output test:lint:*",
+    "test:lint": "npm-run-all --parallel --aggregate-output --continue-on-error test:lint:*",
     "test:lint:js": "eslint .",
     "test:lint:md": "remark -qf .",
     "test:lint:stylelint": "stylelint \"layouts/css/**/*.{css,scss}\" --report-needless-disables",
