chore: enable linting for previously ignored file (#4481)

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,9 @@
       "files": [
         "**/*.md/*.js"
       ],
+      "parserOptions": {
+        "ecmaVersion": "latest"
+      },
       "rules": {
         "eqeqeq": "off",
         "no-const-assign": "off",
