--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "marked": "^4.0.14",
     "metalsmith": "^2.4.2",
     "metalsmith-collections": "^0.9.0",
-    "metalsmith-discover-helpers": "^0.1.1",
-    "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-feed": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-one-replace": "^0.1.7",
@@ -68,6 +66,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "glob": "^7.2.0",
     "lockfile-lint": "^4.7.4",
     "nock": "^13.2.4",
     "node-fetch": "^2.6.7",
