chore: replace eslint-config-semistandard with eslint-config-standard (#4586)
eslint-config-semistandard hasn't been published in a year as of this
writing and does not install with the version of eslint that we use
without --force or --legacy-peer-deps.

Replace it with the up-to-date eslint-config-standard, and change the
semi rule in .eslintrc to have the same impact. This also disables
two (new?) rules that now flag errors in our markdown files. These
can be investigated later or not. It also makes a small change to
release-post.js so it complies with a rule about using object
shorthand when possible.

Fixes: https://github.com/nodejs/nodejs.org/issues/4585

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": [
     "eslint:recommended",
-    "semistandard",
+    "standard",
     "prettier"
   ],
   "plugins": [
@@ -29,6 +29,8 @@
       },
       "rules": {
         "eqeqeq": "off",
+        "n/no-deprecated-api": "off",
+        "n/handle-callback-err": "off",
         "no-const-assign": "off",
         "no-undef": "off",
         "no-unused-expressions": "off",
@@ -42,7 +44,8 @@
             "singleQuote": true,
             "trailingComma": "none"
           }
-        ]
+        ],
+        "semi": ["error", "always"]
       }
     }
   ]
