build (deps): fix for upgrading metal-smith (#4657)
There's a missing reference for 'fs-extra' and here's the fix.

Refs: https://github.com/nodejs/nodejs.org/pull/4655.

Co-authored-by: Maledong <maledong_github@outlook.com>

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@metalsmith/markdown": "^1.6.0",
     "@metalsmith/permalinks": "^2.4.0",
     "autoprefixer": "^10.4.7",
+    "fs-extra": "^10.1.0",
     "graceful-fs": "^4.2.10",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.0",
@@ -41,7 +42,7 @@
     "junk": "^3.1.0",
     "lodash.defaultsdeep": "^4.6.1",
     "marked": "^4.0.17",
-    "metalsmith": "^2.4.3",
+    "metalsmith": "^2.5.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-feed": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
