fix: Html validator checks re-added (#4693)
In order to avoid some HTML links, tags' missing, Html validator checks
should be re-added here.

Refs:https://github.com/nodejs/nodejs.org/pull/4358.

Co-authored-by: Rich Trott <rtrott@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,9 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit
 
+      - name: Run HTML validator
+        run: npm run test:html
+
       - name: Run linkinator
         uses: JustinBeckwith/linkinator-action@v1
         with:
