fix: remove the recursive link of Node.js API docs
Since there's a recursive link of Node.js API docs when clicking "New
Issue" on GitHub of Node.js org in GitHub, we should refer the link
directly to the Node.js official site instead of the website itself.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://github.com/nodejs/help/issues/
     about: File an issue in our help repo.
   - name: 📗 Node.js API Docs
-    url: https://github.com/nodejs/nodejs.org/issues/new/choose
-    about: Please open an issue in the main Node.js repo, prefixed with "doc".
+    url: https://github.com/nodejs/node/issues/new?assignees=&labels=doc&template=3-api-ref-docs-problem.yml
+    about: Please open an issue in the main Node.js repo.
